# DTNS

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: newsletter.yml
docs/: architecture.md  decisions.md
docs/contracts/: README.md  ai_execution_state.md  ai_execution_state.schema.json  articles.schema.json  collection_report.md  collection_report.schema.json  discord_delivery.md  editor_draft.md  editor_draft.schema.json  editor_generation_checkpoint.md  editor_generation_checkpoint.schema.json  json_artifact_validation.md  newsletter.md  pipeline_run.md  pipeline_run.schema.json  publish_receipt.md  publish_receipt.schema.json  tagger_batch_checkpoint.schema.json  tagger_batch_processing.md  topic_articles.schema.json  trend_batch_processing.md  trend_candidate_checkpoint.schema.json  trends.schema.json
src/dtns/: __init__.py  cli.py  pipeline.py
src/dtns/agents/: execution_state.py  gemini.py
src/dtns/classifier/: README.md  __init__.py  __main__.py  stage.py
src/dtns/collectors/: README.md  __init__.py  models.py  runner.py  sources.py
src/dtns/contracts/: README.md  __init__.py  collection_report.py  normalized_articles.schema.json  tagged_articles.py  tagged_articles.schema.json
src/dtns/preprocessors/: README.md  __init__.py  __main__.py  stage.py
src/dtns/prompts/: editor_backend.md  editor_qa.md  editor_technology.md  tagger.md  trend_backend.md  (+2 more)
tests/: README.md  test_cli.py  test_collector.py  test_editor.py  test_gemini.py  test_pipeline_run.py  test_preprocessor_classifier_publisher.py  test_tagger.py
(+20 files in other folders)
