[project]
name = "dtns"
version = "0.1.0"
description = "AI-powered weekly engineering newsletter CLI for Discord."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.4",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "google-genai>=1.0.0",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "jsonschema[format]>=4.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.5.0",
]

[project.scripts]
newsletter = "dtns.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
